changes in auth routes

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "app": "nodemon server.js",
-    "dev": "nodemon server1.js"
+    "dev": "nodemon server1.js",
+    "dev2": "nodemon index.js"
   },
   "keywords": [],
   "author": "",
@@ -15,9 +16,11 @@
     "@prisma/client": "^6.4.1",
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
+    "morgan": "^1.10.0",
     "nodemon": "^3.1.9",
     "pg": "^8.13.3",
     "prisma": "^6.4.1"
