--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
+    "nanoid": "^3.3.7",
     "nodemon": "^3.1.9",
     "pg": "^8.13.3",
     "prisma": "^6.4.1"
